# pythontmp

./: .pre-commit-config.yml  README.md  makefile  pyproject.toml
src/: __main__.py
tests/: test.py  test_sample.py
